--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "axios": "^0.26.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    
+    "babel-polyfill": "^6.26.0",
+    "es6-promise": "^4.2.8"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.0",
