--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "vue": "^2.6.14",
-    "vue-router": "^3.0.1",
-    
     "babel-polyfill": "^6.26.0",
-    "es6-promise": "^4.2.8"
+    "better-scroll": "^2.4.2",
+    "es6-promise": "^4.2.8",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.0",
