--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "better-scroll": "^1.15.2",
     "es6-promise": "^4.2.8",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.0",
