--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.15.2",
     "es6-promise": "^4.2.8",
+    "fastclick": "^1.0.6",
     "vue": "^2.6.14",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
